# nlp-feed

./: .env.example  Cargo.toml  README.md
prompts/: blog.txt  blog_finetuned.txt  news.txt
scripts/: deploy.py
src/: main.rs
src/api/: auth.rs  avatar.rs  generate.rs  healthcheck.rs  mod.rs  post.rs  utility.rs
src/exceptions/: gpt.rs
src/fairings/: cors.rs
src/models/: article.rs  avatar.rs  mod.rs  post.rs  user.rs
src/repositories/: mongo.rs
src/requests/: post.rs
src/responses/: post.rs
src/tasks/: generate.rs  mod.rs  populate.rs
src/utility/: mod.rs  news.rs  prompt.rs
