[package]
name = "ai-blog-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
chrono = "0.4"
env_logger = "0.9.1"
log = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
serde_json = "1.0"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"]